@@ -1,10 +1,10 @@
 {
-  "timestamp" : "2022-05-03T02:09:19Z",
-  "count" : 2,
+  "timestamp" : "2022-05-16T16:38:17Z",
+  "count" : 1,
   "count_minmax" : [ 0, 2 ],
   "count_prev_day_inc" : 2,
   "count_prev_day_dec" : 0,
-  "uniques" : 2,
+  "uniques" : 1,
   "uniques_minmax" : [ 0, 2 ],
   "uniques_prev_day_inc" : 2,
   "uniques_prev_day_dec" : 0
