@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-16T08:31:42Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_prev_day_inc" : 1,
-  "count_prev_day_dec" : 0,
+  "timestamp" : "2022-05-16T16:38:17Z",
+  "count" : 2,
+  "count_minmax" : [ 1, 2 ],
+  "count_prev_day_inc" : 2,
+  "count_prev_day_dec" : 1,
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_prev_day_inc" : 1,
-  "uniques_prev_day_dec" : 0
+  "uniques_prev_day_dec" : 1
 }
