@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-05-16T08:31:42Z",
+  "timestamp" : "2022-05-16T16:38:17Z",
   "count_outdated" : 122,
   "uniques_outdated" : 43,
   "count" : 159,
-  "uniques" : 66,
+  "uniques" : 65,
   "clones" : [
     {
       "timestamp": "2022-05-02T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 0, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 0, 2 ]
     },
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-05-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
