@@ -1,11 +1,11 @@
 {
   "count": 37,
-  "uniques": 9,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-05-02T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-05-03T00:00:00Z",
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2022-05-16T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
